--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 </head>
 <body>
     <div class="container">
-        <h1>Todo App</h1>
+        <div class="header">
+            <h1>Todo App</h1>
+            <button id="theme-toggle" class="theme-toggle" aria-label="Toggle theme">🌙</button>
+        </div>
         <div class="input-container">
             <input type="text" id="todo-input" placeholder="Enter a new todo">
             <button id="add-btn">Add Todo</button>
